tests/NormalTests/paczka1/fuzzy1/10072335.err
Error in line 16: S171 A495 55,7
Error in line 22: dmarBw6k7q S171 83,8
Error in line 27: M7efiGyIQG A495 91,0
Error in line 15: JUQVUVyxF A642 0,1
